[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eudaimonia"
version = "0.1.0"
description = "OpenEnv benchmark environment for Project Eudaimonia"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Bhavesh" }
]
dependencies = [
  "openenv-core>=0.2.0",
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "pydantic>=2.0.0",
  "openai>=2.7.2"
]

[tool.setuptools]
packages = ["eudaimonia", "eudaimonia.engine", "eudaimonia.server"]

[project.scripts]
server = "eudaimonia.server.app:main"
